# signapse-mdg

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  skills-lock.json
alembic/: env.py
alembic/versions/: 20260619_0001_supported_symbols.py  20260622_0002_market_data_candles.py  20260622_0003_seed_forex_symbols.py  20260622_0004_cleanup_forex_weekend_candles.py  20260622_0005_seed_xau_usd.py  20260622_0006_seed_twelvedata_us_stocks.py  20260622_0007_seed_twelvedata_wti_etfs.py  20260622_0008_seed_yfinance_symbols.py  20260629_0009_move_crypto_to_twelvedata.py
app/: __init__.py  backfill_candles.py  main.py
app/api/: errors.py  routes_candles.py  routes_health.py  routes_quotes.py  routes_stream.py  routes_symbols.py  serialization.py
app/cache/: __init__.py  candle_cache.py  quote_cache.py
app/core/: __init__.py  config.py
app/db/: models.py  repositories.py  session.py
app/domain/: candle_schedules.py  candles.py  errors.py  market_sessions.py  quotes.py  streams.py  symbols.py  timeframes.py
app/providers/: __init__.py  binance_spot.py  binance_spot_stream.py  normalization.py  price_tick_stream.py  twelvedata_forex.py  twelvedata_forex_stream.py  twelvedata_keys.py  twelvedata_market_data.py  twelvedata_market_data_stream.py  yfinance_market_data.py  yfinance_market_data_stream.py
app/services/: candle_provider_router.py  candles.py  quote_provider_router.py  quotes.py  stream_manager.py  stream_provider_router.py  symbols.py
docs/: api-contract.md  assets.md  deploy-docker.md  spec.md  system-design.md  tech-stack.md
tests/integration/: conftest.py  test_candles.py  test_supported_symbol_registry.py
tests/unit/: test_backfill_candles.py  test_binance_candle_provider.py  (+27 more)
(+118 files in other folders)
