[project]
name = "signapse-mdg"
version = "0.1.0"
description = "Signapse Market Data Gateway"
requires-python = "==3.14.*"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]==0.137.2",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "uvicorn==0.49.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==2.1.0",
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.18",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["app"]

