[project]
name = "signapse-mdg"
version = "0.1.0"
description = "Signapse Market Data Gateway"
requires-python = "==3.14.*"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "binance-sdk-spot==9.2.0",
    "fastapi[standard-no-fastapi-cloud-cli]==0.137.2",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "sqlalchemy[asyncio]==2.0.51",
    "twelvedata==1.4.0",
    "tzdata==2026.1",
    "uvicorn==0.49.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==2.1.0",
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.18",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires TEST_DATABASE_URL pointing to a disposable PostgreSQL database",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["app"]
